# ollama_forwarder

./: .gitignore  Dockerfile  README.md  ollama_service.py  pyproject.toml
.github/workflows/: docker-build.yml
k8s/: README.md  deployment.yaml  service.yaml
